plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id("com.gradleup.shadow") version "9.1.0"
}

allprojects {
    repositories {
        flatDir {
            dirs 'libs'
        }
        mavenCentral()
        maven { url = "https://oss.sonatype.org/content/repositories/snapshots" }
        maven { url = "https://hub.spigotmc.org/nexus/content/repositories/snapshots/" }
        maven { url = "https://jitpack.io" }
        maven { url = "https://repo.papermc.io/repository/maven-public/" }
    }
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'com.gradleup.shadow'

    group 'com.clubobsidian'
    version '5.0.0-SNAPSHOT'

    tasks.withType(JavaCompile) {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }


    test {
        useJUnitPlatform()
    }

    shadowJar {
        archiveClassifier.set('')
        relocate 'javax.annotation', 'com.clubobsidian.obbylang.javaxannotation'
        relocate 'afu', 'com.clubobsidian.obbylang.afu'
        relocate 'io.netty', 'com.clubobsidian.obbylang.netty'
        relocate 'io.lettuce.core', 'com.clubobsidian.obbylang.io.lettuce.core'
        relocate 'org.apache.commons.io', 'com.clubobsidian.obbylang.commons.io'
        relocate 'com.typesafe', 'com.clubobsidian.obbylang.typesafe'
        relocate 'com.zaxxer', 'com.clubobsidian.obbylang.zaxxer'
        relocate 'com.fasterxml', 'com.clubobsidian.obbylang.fasterxml'
        relocate 'org.jsoup', 'com.clubobsidian.obbylang.jsoup'
        relocate 'reactor', 'com.clubobsidian.obbylang.reactor'
        relocate 'org.apache', 'com.clubobsidian.obbylang.apache'
        relocate 'org.aopalliance', 'com.clubobsidian.obbylang.aopalliance'
        relocate 'org.checkerframework', 'com.clubobsidian.obbylang.checkerframework'
        relocate 'org.codehaus', 'com.clubobsidian.obbylang.codehaus'
        relocate 'org.reactivestreams', 'com.clubobsidian.obbylang.reactivestreams'
        relocate 'org.slf4j', 'com.clubobsidian.obbylang.slf4j'
        relocate 'org.yaml.snakeyaml', 'com.clubobsidian.obbylang.snakeyaml'
        relocate 'com.clubobsidian.wrappy', 'com.clubobsidian.obbylang.wrappy'
        relocate 'org.spongepowered.configurate', 'com.clubobsidian.obbylang.configurate'
        relocate 'com.google.common', 'com.clubobsidian.obbylang.guava'
        relocate 'io.leangen', 'com.clubobsidian.obbylang.leangen'
        relocate 'kotlin', 'com.clubobsidian.obbylang.kotlin'
        relocate 'kotlinx', 'com.clubobsidian.obbylang.kotlinx'
        relocate 'net.bytebuddy', 'com.clubobsidian.obbylang.bytebuddy'
        relocate 'net.kyori.examination', 'com.clubobsidian.obbylang.examination'
        relocate 'okhttp3', 'com.clubobsidian.obbylang.okhttp3'
        relocate 'okio', 'com.clubobsidian.obbylang.okio'
        relocate 'org.bson', 'com.clubobsidian.obbylang.bson'
        relocate 'org.intellij.lang.annotations', 'com.clubobsidian.obbylang.intellijannotations'
        relocate 'org.jctools', 'com.clubobsidian.obbylang.jctools'
        relocate 'org.jetbrains.annotations', 'com.clubobsidian.obbylang.jetbrainsannotations'
        relocate 'com.clubobsidian.crouton', 'com.clubobsidian.obbylang.crouton'
        relocate 'com.clubobsidian.trident', 'com.clubobsidian.obbylang.trident'
        relocate 'com.google.errorprone', 'com.clubobsidian.obbylang.errorprone'
        relocate 'com.google.gson', 'com.clubobsidian.obbylang.gson'
        relocate 'com.google.inject', 'com.clubobsidian.obbylang.guice'
        relocate 'com.google.j2objc', 'com.clubobsidian.obbylang.j2objc'
        relocate 'com.google.thirdparty.publicsuffix', 'com.clubobsidian.obbylang.publicsuffix'
        relocate 'com.mongodb', 'com.clubobsidian.obbylang.mongodb'
        relocate 'com.github.benmanes.caffeine', 'com.clubobsidian.obbylang.caffeine'
    }

    dependencies {
        compileOnly 'org.slf4j:slf4j-api:1.7.32'
        compileOnly("javax.inject:javax.inject:1")
        api 'com.zaxxer:HikariCP:5.0.1'
        api 'com.github.clubobsidian:wrappy:2.3.2'
        api 'org.jsoup:jsoup:1.11.3'
        api 'io.lettuce:lettuce-core:6.1.6.RELEASE'
        api 'net.bytebuddy:byte-buddy:1.18.8'
        api 'com.google.inject:guice:5.1.0'
        api 'commons-io:commons-io:2.11.0'
        api 'org.apache.commons:commons-lang3:3.12.0'
        api 'com.github.clubobsidian:trident:3.0.0'
        api 'com.github.clubobsidian:crouton:0.6.1'
        api 'com.zaxxer:influx4j:2.14'
        api 'org.mongodb:mongodb-driver-sync:4.6.1'
        api 'com.caoccao.qjs4j:qjs4j:0.1.1'
        api 'com.github.ben-manes.caffeine:caffeine:3.2.3'
        testImplementation(platform('org.junit:junit-bom:6.0.3'))
        testImplementation('org.junit.jupiter:junit-jupiter')
        testRuntimeOnly('org.junit.platform:junit-platform-launcher')
    }
}